# variational-ground-state-solver

./: .dockerignore  .gitignore  Dockerfile  PSI_Project.ipynb  README.md  docker-compose.gpu.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
app/: streamlit_app.py
docs/: getting-started.md  index.md  running-locally.md  running-with-docker.md  troubleshooting.md
docs/concepts/: discretization.md  orthogonality.md  variational-principle.md
docs/experiments/: eigensolver.md  excited-states.md  ground-state.md  hyperparameter-sweep.md  trace-browser.md
docs/reference/: models.md  outputs-and-trace.md  potentials.md  reproducibility-cli.md  training.md
scripts/: reproduce_from_config.py
src/psitest/: __init__.py  grid.py  models.py  physics.py  plotting.py  potentials.py  solver_fd.py  trace.py  trainer.py
